# ppt_creator_app

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  NEXT_STEPS.md  README.md  README_hf_llm_playground.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: ai-layer.md  baseline-management.md  compare-pptx.md  hf-local-service-migration-plan.md  preview-provenance.md  review-pptx.md  visual-regression.md
docs/gallery/: manifest.json
docs/layout_audit/: preview-manifest.json  report.json  report.md
examples/: ai_sales.json  board_review.json  board_strategy_review.json  briefing_sales.json  consulting_steerco.json  layout_showcase.json  product_operating_review.json  product_strategy.json  sales_qbr.json
models/: .gitkeep
outputs/: .gitkeep
ppt_creator/: __init__.py  api.py  assets.py  brand_packs.py  catalog.py  cli.py  preview.py  profiles.py  qa.py  renderer.py  schema.py  templates.py  theme.py  workflows.py
ppt_creator/layouts/: __init__.py  _column_panels.py  _components.py  agenda.py  bullets.py  cards.py  chart.py  closing.py  comparison.py  faq.py  image_text.py  metrics.py  section.py  summary.py  table.py  timeline.py  title.py  two_column.py
ppt_creator_ai/: __init__.py  briefing.py  cli.py  evals.py  refine.py  structured_generation.py
ppt_creator_ai/providers/: __init__.py  (+8 more)
scripts/: run_transformers.py
tests/: test_ai_briefing.py  test_ai_cli.py  test_api.py  test_cli.py  test_examples.py  test_layouts.py  test_public_api.py  test_qa.py  test_renderer.py  test_schema.py
tmp/: .gitkeep
(+8 files in other folders)
